setup reducers. ready for changing

--- a/Exercises7.9.-7.21.(extending the bloglist)/package.json
+++ b/Exercises7.9.-7.21.(extending the bloglist)/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +41,7 @@
   "proxy": "http://localhost:3003",
   "devDependencies": {
     "cypress": "^4.10.0",
+    "redux-devtools-extension": "^2.13.8",
     "eslint-plugin-cypress": "^2.11.1",
     "eslint-plugin-jest": "^23.18.0"
   }
