--- a/Exercises7.9.-7.21.(extending the bloglist)/package.json
+++ b/Exercises7.9.-7.21.(extending the bloglist)/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
@@ -40,9 +41,9 @@
   },
   "proxy": "http://localhost:3003",
   "devDependencies": {
-    "cypress": "^4.10.0",
-    "redux-devtools-extension": "^2.13.8",
+    "cypress": "^4.11.0",
     "eslint-plugin-cypress": "^2.11.1",
-    "eslint-plugin-jest": "^23.18.0"
+    "eslint-plugin-jest": "^23.18.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
